Indonesian voice recog

--- a/templates/ride_monitor.html
+++ b/templates/ride_monitor.html
@@ -138,7 +138,7 @@ function initVoiceRecognition() {
         voiceRecognition = new SpeechRecognition();
         voiceRecognition.continuous = true;
         voiceRecognition.interimResults = true;
-        voiceRecognition.lang = 'en-US';
+        voiceRecognition.lang = 'id';
         
         voiceRecognition.onresult = function(event) {
             const last = event.results.length - 1;
